--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,17 @@
-# http://editorconfig.org
-root = true
-
 [*]
-indent_style = tab
-tab_width = 2
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
-
-[*.yml]
 indent_style = space
+max_line_length = 100
+indent_size = 4
+
+[*.ts]
+indent_size = 2
+
+[*.yaml]
+indent_size = 2
+
+[*.json]
+indent_size = 2
