--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-	"printWidth": 140,
-	"singleQuote": true,
-	"semi": true,
-	"useTabs": true
+    "printWidth": 120,
+    "singleQuote": false,
+    "semi": true,
+    "useTabs": false
 }
