Separate dev and prod environments

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,7 +2,18 @@ name = "acearchive-submission"
 main = "src/index.ts"
 compatibility_date = "2023-09-22"
 
-[[d1_databases]]
-binding = "DB"
-database_name = "acearchive-artifacts"
-database_id = "ffd316de-0455-429b-90c7-45f935183333"
+[env.prod]
+route = "submit.acearchive.lgbt"
+
+  [[env.prod.d1_databases]]
+  binding = "DB"
+  database_name = "acearchive-artifacts"
+  database_id = "ffd316de-0455-429b-90c7-45f935183333"
+
+[env.dev]
+route = "dev.submit.acearchive.lgbt"
+
+  [[env.dev.d1_databases]]
+  binding = "DB"
+  database_name = "acearchive-artifacts-dev"
+  database_id = "078c47dc-e6ae-4edf-89b3-db5a6bb1b4d6"
