--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,10 @@ main = "src/index.ts"
 compatibility_date = "2023-09-22"
 
 [env.prod]
-route = "submit.acearchive.lgbt"
+
+  [env.prod.route]
+  pattern = "submit.acearchive.lgbt"
+  custom_domain = true
 
   [[env.prod.d1_databases]]
   binding = "DB"
@@ -11,7 +14,10 @@ route = "submit.acearchive.lgbt"
   database_id = "ffd316de-0455-429b-90c7-45f935183333"
 
 [env.dev]
-route = "dev.submit.acearchive.lgbt"
+
+  [env.dev.route]
+  pattern = "submit-dev.acearchive.lgbt"
+  custom_domain = true
 
   [[env.dev.d1_databases]]
   binding = "DB"
